2009-10-30  Juergen Wieferink  <wieferink@freenet.de>

	* src/command.c, src/command.h (do_string, do_string_and_free):
	Use to different functions depending on whether the command string has
	to be freed.  Don't reset screen_ok.
	
	* src/command.c, src/command.h (do_string_replot), src/fit.c
	(fit_interrupt): Use do_string() instead of do_line().

	* src/command.c, src/misc.c, src/mouse.c, src/plot.c src/term.c:
	Adjust calls to do_string().

	* src/plot2d.c src/graph3d.c src/gplt_x11.c term/lua.trm term/latex.trm
	src/wxterminal/gp_cairo_helpers.c:
	Silence gcc -Wall warnings.

	* src/misc.c: Remove latin1 char.

	* term/x11.trm: Silence valgrind warning.

	* demo/vector.dem, demo/fit.dem: Add closing quotes.

2009-10-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/win/winmain.c (MyFPrintF MyVFPrintF MyPrintF): Workaround for
	vsnprintf(NULL,0,...) returning zero (MingW 3.4).

	* docs/gnuplot.doc: Document "linetype <n>" option of linecolor and
	textcolor.

2009-10-28  Ethan A Merritt  <merritt@u.washington.edu>

	* term/luz.trm term/lua/gnuplot-tikz.lua: Remove conditional tests
	for gnuplot version 4.3.  We're past that now.

2009-10-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/save.c (save_fillstyle):  Repair missing brackets in if/else.

2009-10-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c src/axis.c src/term.c:  Replace in-line warnings sent
	to stderr by instead calling int_warn();

2009-10-24  David Marx  <itsdmarx@users.sourceforge.net>

	* src/wxterminal/wxt_gui.cpp:  The pieces of a concatenated string
	literal must be wrapped in wxT() to satisfy the Sun Studio CC compiler.
	Bug #2883574

2009-10-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (make_palette): Remove useless warning message.

	* src/internal.c (f_power):  Check for integer overflow from i**j and
	return a real value (well, actually a complex value) if it is needed.
	Bug #2881789

2009-10-23  Ethan A Merritt  <merritt@u.washington.edu>
